Bug 1111041 - Detect PR_GetPhysicalMemorySize failure in SurfaceCache. r=dholbert, a=sledru